spade-tests/src/snapshots/spade_tests__ast_lowering__include_bytes_macro_with_non_string_token.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn test() -> bool {
    include_bytes!(3)
}


error: Incorrect token passed to `include_bytes!`
  ┌─ testinput:2:5
  │
2 │     include_bytes!(3)
  │     ^^^^^^^^^^^^^
  │
  = note: A single string literal containing the path to include must be passed
